--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Welcome to My Website</h1>
         <p>This is a simple webpage using HTML, CSS, and JavaScript.</p>
-        <button onclick=""showMessage()">Click Me</button>"
-        <script src=""script.js"></script>
+        <button onclick="showMessage()">Click Me</button>"
+        <script src="script.js"></script>
     </body>
     </html>
